RESOLVED FIXED280405
[WGSL] Attribute validator should not access Type::alignment
https://bugs.webkit.org/show_bug.cgi?id=280405
Summary [WGSL] Attribute validator should not access Type::alignment
Tadeu Zagallo
Reported 2024-09-26 06:50:06 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2024-09-26 06:50:08 PDT
Tadeu Zagallo
Comment 2 2024-09-26 07:49:08 PDT
EWS
Comment 3 2024-09-27 02:35:12 PDT
Committed 284346@main (be0e71ac63cf): <https://commits.webkit.org/284346@main> Reviewed commits have been landed. Closing PR #34301 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.