[WGSL] Attribute validator should not access Type::alignment https://bugs.webkit.org/show_bug.cgi?id=280405 rdar://136222279

Reviewed by Mike Wyrzykowski.

Type::alignment can access AST::Structure::m_alignment, which is populated by the
AttributeValidator itself, so it's only safe to access it when no validation errors
have occurred so far. Otherwise, there's a chance we might be accessing the alignment
(or size) of a struct that contained an error, and therefore its alignment/size
wouldn't have been computed.

* Source/WebGPU/WGSL/AttributeValidator.cpp:
(WGSL::AttributeValidator::visit):
* Source/WebGPU/WGSL/tests/invalid/fuzz-136222279.wgsl: Added.

Canonical link: https://commits.webkit.org/284346@main